add maven opts